[project]
name = "agentchord"
version = "0.2.0"
description = "Protocol-First Multi-Agent Framework (MCP + A2A)"
authors = [
    { name = "AgentChord Contributors" },
]
maintainers = [
    { name = "AgentChord Contributors" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "agent", "multi-agent", "mcp", "a2a", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.25,<1.0",
    "rich>=13.0,<14.0",
    "tenacity>=8.0,<9.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0,<2.0"]
anthropic = ["anthropic>=0.20,<1.0"]
mcp = ["mcp>=1.0,<2.0"]
a2a = ["starlette>=0.35,<1.0", "uvicorn>=0.27,<1.0"]
storage = ["aiosqlite>=0.20,<1.0"]
telemetry = ["opentelemetry-api>=1.20,<2.0", "opentelemetry-sdk>=1.20,<2.0"]
rag = ["chromadb>=0.4,<1.0"]
rag-full = [
    "chromadb>=0.4,<1.0",
    "faiss-cpu>=1.7,<2.0",
    "numpy>=1.24,<3.0",
    "sentence-transformers>=2.0,<3.0",
    "pypdf>=3.0,<5.0",
]
all = [
    "openai>=1.0,<2.0",
    "anthropic>=0.20,<1.0",
    "mcp>=1.0,<2.0",
    "starlette>=0.35,<1.0",
    "uvicorn>=0.27,<1.0",
    "aiosqlite>=0.20,<1.0",
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "chromadb>=0.4,<1.0",
    "faiss-cpu>=1.7,<2.0",
    "numpy>=1.24,<3.0",
    "sentence-transformers>=2.0,<3.0",
    "pypdf>=3.0,<5.0",
]

[project.urls]
Homepage = "https://github.com/agentchord/agentchord"
Repository = "https://github.com/agentchord/agentchord"
Documentation = "https://agentchord.github.io/agentchord"
"Bug Tracker" = "https://github.com/agentchord/agentchord/issues"
Changelog = "https://github.com/agentchord/agentchord/blob/main/CHANGELOG.md"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.0"
ruff = "^0.2"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: Integration tests (cross-module, may be slower)",
]

[tool.coverage.run]
source = ["agentchord"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/llm/openai.py",
    "*/llm/anthropic.py",
    "*/protocols/a2a/client.py",
    "*/protocols/a2a/server.py",
    "*/protocols/mcp/client.py",
    "*/rag/embeddings/openai.py",
    "*/rag/embeddings/ollama.py",
    "*/rag/embeddings/sentence_transformer.py",
    "*/rag/vectorstore/chroma.py",
    "*/rag/vectorstore/faiss.py",
    "*/rag/loaders/pdf.py",
    "*/rag/loaders/web.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
]
